--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Account 2: Benvenuto Signor ...</p>
         <input type="input" name="versaSon" placeholder="Inserisci Versamento">
         <button type="button" name="versaSon" onclick="versaSon()">Versa</button>
-        <p name="versa"></p>
+        <p name="versaSon"></p>
 
         <input type="input" name="prelevaSon" placeholder="Inserisci Prelievo">
         <button type="button" name="prelevaSon" onclick="prelevaSon()">Preleva</button>
