--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p>Benvenuto gentile cliente. <br>Selezioni l'account con cui fare operazioni.</p>
         <button type="button" name="click_saldo">Mostra Saldo</button>
         <p name="saldo"></p>
+        <p name="transaction"></p>
 
         <hr width="100%">
         <!-- Account Mother -->
