--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <div class="welcome">
             <p>Benvenuto gentile cliente. <br>Selezioni l'account con cui fare operazioni.</p>
             <button type="button" name="click_saldo">Mostra Saldo</button>
-            <p name="saldo"></p>
-            <p name="transaction"></p>
+            <p>Saldo Account 1: <span name="saldo-1"> - </span> Euro</p>
+            <p>Saldo Account 2: <span name="saldo-2"> - </span> Euro</p>
+            <p>Saldo Totale: <span name="saldo-tot"> - </span> Euro</p>
+            <p>Numero Transazioni: <span name="transaction"></span> </p>
         </div>
         <hr width="100%">
         
@@ -26,11 +28,9 @@
             <p>Account 1: Benvenuta Signora ...</p>
             <input type="input" name="versa" placeholder="Inserisci Versamento">
             <button type="button" name="click_versa" onclick="versaMother()">Versa</button>
-            <p name="versa"></p>
 
             <input type="input" name="preleva" placeholder="Inserisci Prelievo">
             <button type="button" name="click_preleva" onclick="prelevaMother()">Preleva</button>
-            <p name="preleva"></p>
         </div>
         <hr width="100%">
 
@@ -39,11 +39,9 @@
             <p>Account 2: Benvenuto Signor ...</p>
             <input type="input" name="versaSon" placeholder="Inserisci Versamento">
             <button type="button" name="versaSon" onclick="versaSon()">Versa</button>
-            <p name="versaSon"></p>
 
             <input type="input" name="prelevaSon" placeholder="Inserisci Prelievo">
             <button type="button" name="prelevaSon" onclick="prelevaSon()">Preleva</button>
-            <p name="prelevaSon"></p>
         </div>
     </div>
 
